# networkviewer

./: .gitmodules  README.md
NetworkViewer/: CMakeLists.txt  README.txt
NetworkViewer-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  OpenECoSys-NetworkViewer.cbp  cmake_install.cmake  install_manifest.txt
NetworkViewer-build/GUI/: Makefile  cmake_install.cmake
NetworkViewer-build/GUI/plugins/: Makefile  cmake_install.cmake
NetworkViewer-build/GUI/plugins/Console/: Makefile  cmake_install.cmake  moc_ConsolePlugin.cpp  moc_ConsolePlugin.cpp_parameters  ui_ConsolePlugin.h
NetworkViewer-build/GUI/plugins/DeclarativeTest/: Makefile  cmake_install.cmake  moc_DeclarativeTest.cpp  moc_DeclarativeTest.cpp_parameters  qrc_DeclarativeTest.cpp  ui_DeclarativeTest.h
NetworkViewer-build/GUI/plugins/Logger/: Makefile  cmake_install.cmake  moc_Logger.cpp  moc_Logger.cpp_parameters  moc_ModuleVariableTableWidget.cpp  moc_ModuleVariableTableWidget.cpp_parameters  ui_Logger.h
NetworkViewer-build/GUI/plugins/ScopeView/: Makefile  cmake_install.cmake  moc_ScopeCurve.cpp  (+7 more)
NetworkViewer-build/GUI/src/: Makefile  cmake_install.cmake  moc_AddVariableDialog.cpp  moc_AddVariableDialog.cpp_parameters  moc_BasePlugin.cpp_parameters  moc_BasePluginEvent.cpp_parameters  moc_DeviceSelectorDialog.cpp  moc_DeviceSelectorDialog.cpp_parameters  moc_ModuleConfigurationView.cpp  moc_ModuleConfigurationView.cpp_parameters  moc_NETVInterfaceManagerView.cpp  moc_NETVInterfaceManagerView.cpp_parameters  moc_NetworkModuleItem.cpp  moc_NetworkModuleItem.cpp_parameters  moc_NetworkView.cpp  moc_NetworkView.cpp_parameters  moc_NetworkViewerSplashScreen.cpp  moc_NetworkViewerSplashScreen.cpp_parameters  moc_PreferencesDialog.cpp  moc_PreferencesDialog.cpp_parameters  qrc_NetworkViewer.cpp  ui_AddVariableDialog.h  ui_DeviceSelectorDialog.h  ui_ModuleConfigurationView.h  ui_NETVInterfaceManagerView.h  ui_NetworkView.h  ui_PreferencesDialog.h  ui_TestView.h
NetworkViewer-build/config/: Makefile  cmake_install.cmake
NetworkViewer-build/console/: Makefile  cmake_install.cmake
NetworkViewer-build/console/src/: Makefile  cmake_install.cmake
NetworkViewer-build/core/: Makefile  cmake_install.cmake
NetworkViewer-build/core/QextSerialPort/: Makefile  cmake_install.cmake
NetworkViewer-build/core/drivers/: Makefile  cmake_install.cmake
NetworkViewer-build/core/src/: Makefile  cmake_install.cmake  moc_ModuleConfiguration.cpp  moc_ModuleConfiguration.cpp_parameters  moc_ModuleVariable.cpp  moc_ModuleVariable.cpp_parameters  moc_NETVBroadcaster.cpp  moc_NETVBroadcaster.cpp_parameters  moc_NETVDevice.cpp_parameters  moc_NETVInterfaceHandler.cpp  moc_NETVInterfaceHandler.cpp_parameters  moc_NETVInterfaceManager.cpp  moc_NETVInterfaceManager.cpp_parameters  moc_NETVMessageEvent.cpp_parameters  moc_NETVRemoteClient.cpp  moc_NETVRemoteClient.cpp_parameters  moc_NETVRemoteServer.cpp  moc_NETVRemoteServer.cpp_parameters  moc_NETV_define.cpp_parameters  moc_NetworkModule.cpp  moc_NetworkModule.cpp_parameters  moc_NetworkScheduler.cpp  moc_NetworkScheduler.cpp_parameters  moc_UserPreferences.cpp_parameters
NetworkViewer-build/package/: Makefile  cmake_install.cmake
NetworkViewer-build/scripts/: Makefile  cmake_install.cmake
NetworkViewer/GUI/: CMakeLists.txt
NetworkViewer/GUI/plugins/: CMakeLists.txt
NetworkViewer/GUI/plugins/Console/: CMakeLists.txt
NetworkViewer/GUI/plugins/DeclarativeTest/: CMakeLists.txt
NetworkViewer/GUI/plugins/Logger/: CMakeLists.txt
NetworkViewer/GUI/plugins/ScopeView/: CMakeLists.txt  ScopeCurve.cpp  ScopeCurve.h  ScopeView.cpp  ScopeView.h
NetworkViewer/GUI/plugins/ScriptEngine/: CMakeLists.txt  ScriptEngine.cpp
NetworkViewer/GUI/plugins/dsPICBootloader/: CMakeLists.txt
NetworkViewer/GUI/plugins/sample/: CMakeLists.txt
NetworkViewer/GUI/src/: CMakeLists.txt  ModuleConfigurationView.cpp  ModuleConfigurationView.h  ModuleConfigurationView.ui  NetworkModuleItem.cpp  NetworkView.cpp  main.cpp  networkviewer.cpp  networkviewer.h  networkviewer.ui
NetworkViewer/GUI/src/NETVModuleView/: CMakeLists.txt  NETVModuleView.cpp  NETVModuleView.h  NETVModuleView.ui
NetworkViewer/console/src/: CMakeLists.txt  main.cpp  osc_generator.cpp
NetworkViewer/core/: CMakeLists.txt
NetworkViewer/core/drivers/: CMakeLists.txt
NetworkViewer/core/drivers/Common/: CMakeLists.txt  DriversCommon.h  SerialPortSelectionDialog.cpp  SerialPortSelectionDialog.h
NetworkViewer/core/drivers/EthernetBridge/: CMakeLists.txt  EthernetBridge.cpp
NetworkViewer/core/drivers/Loopback/: CMakeLists.txt  Loopback.cpp
NetworkViewer/core/drivers/PCAN/: CMakeLists.txt
NetworkViewer/core/drivers/SerialBridge/: CMakeLists.txt  SerialBridge.cpp  SerialBridge.h
NetworkViewer/core/drivers/SerialEmulator/: CMakeLists.txt  SerialEmulator.cpp  SerialEmulator.h
NetworkViewer/core/drivers/SocketCAN/: CMakeLists.txt  SocketCAN.cpp
NetworkViewer/core/drivers/TcpRemoteClient/: CMakeLists.txt
NetworkViewer/core/drivers_new/: CMakeLists.txt
NetworkViewer/core/drivers_new/Loopback/: CMakeLists.txt  Loopback.cpp  Loopback.h
NetworkViewer/core/src/: CANMessage.cpp  CANMessage.h  CMakeLists.txt  Core.h  CoreDeserializer.cpp  CoreDeserializer.h  CoreDriver.cpp  CoreDriver.h  CoreDriverFactory.cpp  CoreDriverFactory.h  CoreDriverInfo.h  CoreDriverManager.cpp  CoreDriverManager.h  CoreMessage.cpp  CoreMessage.h  CoreProtocols.h  CoreSerializer.cpp  CoreSerializer.h  ModuleConfiguration.cpp  ModuleConfiguration.h  ModuleVariable.cpp  ModuleVariable.h  NETVBroadcaster.h  NETVDevice.h  NETVDriverManager.cpp  NETVDriverManager.h  NETVInterfaceHandler.cpp  NETVInterfaceHandler.h  NETVInterfaceManager.cpp  NETVInterfaceManager.h  NETVMessage.cpp  NETVMessage.h  NETVMessageEvent.h  NETVModule.cpp  NETVModule.h  NETVModuleConfiguration.cpp  NETVModuleConfiguration.h  NETVRemoteClient.h  NETVRemoteServer.cpp  NETVRemoteServer.h  (+7 more)
NetworkViewer/package/: CMakeLists.txt
NetworkViewer/scripts/: CMakeLists.txt
NetworkViewer/tests/src/: CMakeLists.txt  test_Serializer.cpp  test_Serializer.h
(+184 files in other folders)
