#DEFINE PLUGIN INCLUDES

find_package(Qt5Gui REQUIRED)

SET(PLUGIN_INCLUDES	
        ${QWT_INCLUDES}
        ${PROJECT_SOURCE_DIR}/core/src
        ${PROJECT_SOURCE_DIR}/GUI/src
        ${NETWORKVIEWER_GENERATED_INCLUDE}
)	

SET (PLUGIN_LIBRARIES
	networkViewerCore
	networkViewerBase
)


SET (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/plugins)

ADD_SUBDIRECTORY(sample)
ADD_SUBDIRECTORY(ScriptEngine)
ADD_SUBDIRECTORY(Logger)
ADD_SUBDIRECTORY(ScopeView)
ADD_SUBDIRECTORY(dsPICBootloader)
ADD_SUBDIRECTORY(DeclarativeTest)
ADD_SUBDIRECTORY(Console)
